--- a/66/index.html
+++ b/66/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>🎯 Pemintal Nama</h2>
+  <h2>🎯 Pemilih Nama</h2>
   <textarea id="daftar" placeholder="Masukkan nama, pisahkan dengan koma"></textarea><br>
   <button onclick="acak()">Putar</button>
   <div id="hasil"></div>
